# iot-automation-setup

./: .gitignore  CMakeLists.txt  Earthfile  renovate.json  toolchainBSPIotNode.cmake
.github/workflows/: ci.yml
application/blinky-pure-c/: CMakeLists.txt
application/blinky-pure-c/source/: CMakeLists.txt  main.c
application/blinky-pure-c/source/blinky/: CMakeLists.txt
application/blinky-pure-c/source/eiger/: CMakeLists.txt
application/blinky-pure-c/source/indication/: CMakeLists.txt
application/blinky-pure-c/source/movement/: CMakeLists.txt
application/blinky-pure-c/source/system/: CMakeLists.txt
application/blinky-pure-c/test/: CMakeLists.txt
application/blinky-pure-c/test/blinky/: CMakeLists.txt
application/blinky-pure-c/test/eiger/: CMakeLists.txt
application/blinky-pure-c/test/indication/: CMakeLists.txt
application/blinky-pure-c/test/movement/: CMakeLists.txt
application/blinky-pure-c/test/movement/internal/: CMakeLists.txt
devices/stm32_bsp_iot_node/: CMakeLists.txt  build.sh
devices/stm32_bsp_iot_node/src/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/B-L475E-IOT01/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/Components/Common/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/Components/eswifi/: CMakeLists.txt  es_wifi.h  es_wifi_conf.h  es_wifi_io.h  wifi.c  wifi.h
devices/stm32_bsp_iot_node/src/Components/hts221/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/Components/lis3mdl/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/Components/lps22hb/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/Components/lsm6dsl/: CMakeLists.txt
devices/stm32_bsp_iot_node/src/Components/mx25r6435f/: CMakeLists.txt
devices/stm32_cmsis_device_l4/: CMakeLists.txt
devices/stm32_hal_l4/: CMakeLists.txt
devices/stm32_hal_l4/include/: stm32l4xx_hal_conf.h
devices/stm32_runtime_l475_vtg/: CMakeLists.txt
devices/stm32_runtime_l475_vtg/cmake/: FindPlatform.cmake
devices/stm32_runtime_l475_vtg/src/: CMakeLists.txt  STM32L475VGTx_FLASH.ld
