add_subdirectory(Components/Common)
add_subdirectory(Components/eswifi)
add_subdirectory(Components/hts221)
add_subdirectory(Components/lis3mdl)
add_subdirectory(Components/lps22hb)
add_subdirectory(Components/lsm6dsl)
add_subdirectory(Components/mx25r6435f)
add_subdirectory(B-L475E-IOT01)
target_include_directories(stm32bspiotnode PUBLIC ${CMAKE_CURRENT_LIST_DIR})
